feat(example): launch app by vue framework
* fix toolchain file path

Author: noratu

--- a/ExamplePackage/SynoBuildConf/install
+++ b/ExamplePackage/SynoBuildConf/install
@@ -20,20 +20,17 @@ create_package_tgz() {
 	### install needed file into PKG_DIR
 	mkdir -p $binary_dir
 	cp -av examplePkg $binary_dir
-	cp -av ui $package_tgz_dir
-	make install DESTDIR="$package_tgz_dir"
+	make install DESTDIR="$package_tgz_dir" INSTALLDIR="$package_tgz_dir"
+	make packageinstall DESTDIR="$package_tgz_dir" PKG_DIR="$PKG_DIR"
 
 	### create package.tgz $1: source_dir $2: dest_dir
 	pkg_make_package $package_tgz_dir "${PKG_DIR}"
 }
 
 create_spk(){
-
 	cp -av scripts $PKG_DIR/scripts
 	cp -av PACKAGE_ICON*.PNG $PKG_DIR
-	cp -av WIZARD_UIFILES $PKG_DIR
 	cp -av conf $PKG_DIR
-	cp -av ui $PKG_DIR
 	cp -av LICENSE $PKG_DIR
 
 	./INFO.sh > INFO
