--- a/ExamplePackage/SynoBuildConf/install
+++ b/ExamplePackage/SynoBuildConf/install
@@ -10,21 +10,14 @@ mkdir -p $PKG_DIR
 source /pkgscripts/include/pkg_util.sh
 
 create_package_tgz() {
-	local firewere_version=
-	local package_tgz_dir=/tmp/_package_tgz
-	local binary_dir=$package_tgz_dir/usr/local/bin
-
-	### clear destination directory
-	rm -rf $package_tgz_dir && mkdir -p $package_tgz_dir
-
-	### install needed file into PKG_DIR
-	mkdir -p $binary_dir
-	cp -av examplePkg $binary_dir
-	make install DESTDIR="$package_tgz_dir" INSTALLDIR="$package_tgz_dir"
-	make packageinstall DESTDIR="$package_tgz_dir" PKG_DIR="$PKG_DIR"
-
-	### create package.tgz $1: source_dir $2: dest_dir
-	pkg_make_package $package_tgz_dir "${PKG_DIR}"
+        local firewere_version=
+        local package_tgz_dir=/tmp/_package_tgz
+        local binary_dir=$package_tgz_dir/usr/bin
+        rm -rf $package_tgz_dir && mkdir -p $package_tgz_dir
+        mkdir -p $binary_dir
+        cp -av examplePkg $binary_dir
+        make install DESTDIR="$package_tgz_dir"
+        pkg_make_package $package_tgz_dir "${PKG_DIR}"
 }
 
 create_spk(){
